--- a/deb/debfiles/changelog
+++ b/deb/debfiles/changelog
@@ -1,5 +1,29 @@
+libstarshootg (1.55.24621-1) jammy; urgency=medium
+
+  * Update from upstream
+
+ -- James Fidell <james@openastroproject.org>  Mon, 12 Feb 2024 01:39:00 +0000
+
 libstarshootg (1.55.24239-1) jammy; urgency=medium
+
+  * Update from upstream
+
+ -- James Fidell <james@openastroproject.org>  Sat, 6 Jan 2024 00:09:55 +0000
+
+libstarshootg (1.48.18421-1) xenial; urgency=medium
+
+  * Update from upstream
+
+ -- James Fidell <james@openastroproject.org>  Thu, 25 Mar 2021 22:36:55 +0000
+
+libstarshootg (1.46.16627-1) xenial; urgency=medium
+
+  * Update from upstream
+
+ -- James Fidell <james@openastroproject.org>  Thu, 25 Mar 2021 22:36:55 +0000
+
+libstarshootg (1.38.14715-1) xenial; urgency=medium
 
   * Initial release
 
- -- James Fidell <james@openastroproject.org>  Sat, 6 Jan 2024 00:09:55 +0000
+ -- James Fidell <james@openastroproject.org>  Tue, 10 Sep 2019 19:43:55 +0100
